src/objects/Standard_Customer_Pay_Plan_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Total_of_Tax_Av_Milestone_wise__c</fullName>
        <formula>Installment__c  +  Service_Tax_Amount_Q__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total of Tax &amp; Av Milestone wise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
        <relationshipName>Standard_Customer_Pay_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_ConstructionStage__c</fullName>
        <label>Unique ConstructionStage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gst__c</fullName>
        <defaultValue>true</defaultValue>
        <label>gst</label>
        <type>Checkbox</type>
    </fields>
    <label>Standard Customer Pay Plan Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCPPD-{000}</displayFormat>
        <label>Standard Customer Pay Plan Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Customer Pay Plan Details</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>After_Selected_PercentageAmount_Value</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Amount__c ,&apos;Percentage&apos;) , Amount_Value__c  &gt; 100)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>After Selecting Percentage Picklist Value of %Amount  ,You cannot  enter %/Amount Value greater than 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>After_Selecting_On_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;On Date&apos;) , ISBLANK(  On_date__c  ) )</errorConditionFormula>
        <errorDisplayField>On_date__c</errorDisplayField>
        <errorMessage>After Selecting On Date Pick Value of Is to be Paid Pick List,On Date cann&apos;t be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_cannt_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL( Amount__c ,&apos;Amount&apos;) , ISPICKVAL( Amount__c , &apos;Percentage&apos;)) ,  ISBLANK( Calculate_Installment_Amount_as__c ), ISBLANK( Total_Charge_Value_Minus__c ), ISBLANK( Amount_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>% Amount Value cannot be blank,When Calculate Installment Amount as(%) or Total Charge Value Minus are blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Days_Months_Value</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Days_Months__c , &apos;&apos;) , NOT( ISBLANK( Days_Months_Value__c ) ) )</errorConditionFormula>
        <errorDisplayField>Days_Months__c</errorDisplayField>
        <errorMessage>Please Select atleast Days or Months Picklist Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Entering_value_in_Amount_Value_and_Calcu</fullName>
        <active>false</active>
        <errorConditionFormula>AND(AND( NOT( ISBLANK( Amount_Value__c ) ),Amount_Value__c!=0.00) ,OR(NOT( ISBLANK(  Calculate_Installment_Amount_as__c  ) ),
NOT(ISBLANK( Total_Charge_Value_Minus__c))))</errorConditionFormula>
        <errorMessage>After Entering in %Amount Value,You cannot insert in Calculate Installment Amount as(%) and in Total Charge Value Minus or After Entering in Calculate Installment Amount as(%) and in Total Charge Value Minus,You cannot enter in %Amount Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Is_to_be_paid_From_Date_of_Booking</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Customer_Pay_Plan_Header__c == null, ISPICKVAL( Is_to_be_Paid__c , &apos;From Dt. of Booking&apos;),  Days_Months_Value__c ==0, ISPICKVAL( Amount__c , &apos;Percentage&apos;)  )</errorConditionFormula>
        <errorMessage>You Cannot set Percentage in %Amount  if  From Date of Booking is selected  in Is to be paid &amp;  Day/Month  value is 0 and customer pay plan header is null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_ValidationAfterOn</fullName>
        <active>true</active>
        <description>When User Select From Dt. of Booking of PickList and Enter data in On date</description>
        <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c ,&apos;From Dt. of Booking&apos;) ,NOT( ISBLANK( On_date__c ) ))</errorConditionFormula>
        <errorDisplayField>On_date__c</errorDisplayField>
        <errorMessage>After Selecting From Dt. of Booking Picklist Value,You Cannot enter in &quot;On date&quot; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_ValidationCS</fullName>
        <active>true</active>
        <description>When User Select On Date of PickList and Enter data in Project Construction Stages</description>
        <errorConditionFormula>AND(
ISPICKVAL( Is_to_be_Paid__c , &apos;On Date&apos;) ,NOT( ISBLANK( Project_Construction_Stages__c ) )  )</errorConditionFormula>
        <errorMessage>After Selecting On Date  Pick Value,You cannn&apos;t enter in Project Construction Stages</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_ValidationDay</fullName>
        <active>true</active>
        <description>When User Select On Date of PickList and Enter data in Days/Months</description>
        <errorConditionFormula>AND(
ISPICKVAL( Is_to_be_Paid__c , &apos;On Date&apos;), ISPICKVAL( Days_Months__c , &apos;Day(s)&apos;)  )</errorConditionFormula>
        <errorDisplayField>Days_Months__c</errorDisplayField>
        <errorMessage>After Selecting On Date Pick Value,You cannn&apos;t enter in Days/Months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_ValidationDayM</fullName>
        <active>true</active>
        <description>When User Select On Date of PickList and Enter data in Day/Months Value</description>
        <errorConditionFormula>AND(
ISPICKVAL( Is_to_be_Paid__c , &apos;On Date&apos;) , 
NOT( ISBLANK( Days_Months_Value__c ) ))</errorConditionFormula>
        <errorDisplayField>Days_Months_Value__c</errorDisplayField>
        <errorMessage>After Selecting On Date Pick Value,You cannn&apos;t enter in Day/Months Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_Validation_Cons</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;From Dt. of Booking&apos;) ,  NOT( ISBLANK( Project_Construction_Stages__c ) ) )</errorConditionFormula>
        <errorDisplayField>Project_Construction_Stages__c</errorDisplayField>
        <errorMessage>After Selecting From Dt. of Booking Picklist Value,You cannot select Project Construction Stages.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_Validation_DayVa</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;From Dt. of Booking&apos;) , ISBLANK( Days_Months_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Days_Months_Value__c</errorDisplayField>
        <errorMessage>After Selecting  Dt. of Booking Picklist Value of Is to be Paid Day/Months Value cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_Validation_DayVal</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;Construction Stage&apos;) ,  ISBLANK( Days_Months_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Days_Months_Value__c</errorDisplayField>
        <errorMessage>After Selecting Construction Stage Picklist  Value,Day/Months Value Cannot be left  blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_Validation_Ondate</fullName>
        <active>true</active>
        <description>When User Select Construction Stage of PickList and Enter data in On date.</description>
        <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;Construction Stage&apos;) , NOT( ISBLANK( On_date__c ) ) )</errorConditionFormula>
        <errorDisplayField>On_date__c</errorDisplayField>
        <errorMessage>After Selecting Construction Stage Pick Value,You cannn&apos;t enter in On date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_To_Be_Paid_PickList_Validation_Projec</fullName>
        <active>true</active>
        <description>When User Select Construction Stage of PickList and Enter data in Project Construction Stages.</description>
        <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;Construction Stage&apos;) , ISBLANK( Project_Construction_Stages__c ))</errorConditionFormula>
        <errorDisplayField>Project_Construction_Stages__c</errorDisplayField>
        <errorMessage>After Selecting Construction Stage Picklist Value,Project Construction Stages Cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Date_Should_not_be_less_than_Effectiv</fullName>
        <active>true</active>
        <errorConditionFormula>On_date__c  &lt;   Standard_Pay_Plan_Header__r.Effective_from__c</errorConditionFormula>
        <errorDisplayField>On_date__c</errorDisplayField>
        <errorMessage>On date should be less than the Effective from date of the Payment Plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_Percent_Amount_Entering_in_Calcul</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( Amount__c , &apos;Percentage&apos;) ,  NOT( ISBLANK( Calculate_Installment_Amount_as__c ) )  )</errorConditionFormula>
        <errorDisplayField>Calculate_Installment_Amount_as__c</errorDisplayField>
        <errorMessage>After Selecting Percentage Picklist value of %/Amount ,You cannot enter in Calculate Installment Amount as(%)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_Percent_Amount_Entering_in_Minus</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( Amount__c , &apos;Percentage&apos;) , NOT( ISBLANK(  Total_Charge_Value_Minus__c  ) ) )</errorConditionFormula>
        <errorDisplayField>Total_Charge_Value_Minus__c</errorDisplayField>
        <errorMessage>After Selecting Percentage Picklist value of %/Amount ,You cannot enter in Total Charge Value Minus field</errorMessage>
    </validationRules>
</CustomObject>